# gvm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: bfloat16.hpp  float8.hpp  logger.hpp
src/: bfloat16.cpp
submodules/backend/: CMakeLists.txt
submodules/backend/include/: reg.hpp
submodules/backend/src/: reg.cpp
submodules/common/: CMakeLists.txt
submodules/common/include/: logger.hpp
submodules/common/src/: logger.cpp
submodules/common/test/: test_logger.cpp
submodules/core/: CMakeLists.txt
submodules/core/include/: bfloat16.hpp  float8.hpp  half.hpp
submodules/core/src/: bfloat16.cpp
submodules/core/test/: test_bfloat16.cpp  test_float8.cpp
submodules/gdbstub/: CMakeLists.txt
submodules/gdbstub/include/: gdb_common.hpp  gdb_helper.hpp  gdb_rsp.cpp  gdb_rsp.hpp  gdb_server.hpp  gvm-stub.hpp  gvm_stub.hpp
submodules/gdbstub/src/: gdb_helper.cpp  gdb_rsp.cpp  gdb_server.cpp  gdbstub.c  gvm-stub.cpp
submodules/gdbstub/test/: test_gdb_helper.cpp  test_gdb_rsp.cpp
test/: test_float8.cpp  test_type_info.cpp
